--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -140,8 +140,21 @@ main{
         }
     }
     .banda-miniaturas_mobile{
+        display:flex;
+    }
+
+}
+@media screen and (max-width:1400px){ 
+    main .principal .texto-imagen .texto-imagen__texto{
+        h2{font-size:24px;}
+        p{font-size: 18px;}
+    }
+}
+@media screen and (max-width:1200px){ 
+
+    main .banda-miniaturas_mobile{
         background-color:rgb(0, 128, 0);
-        display:none;
+        display:flex;
         flex-direction: column;
         justify-content:center;
         align-items: center;
@@ -214,19 +227,8 @@ main{
             }
         }  
     }
-}
-@media screen and (max-width:1400px){ 
-    main .principal .texto-imagen .texto-imagen__texto{
-        h2{font-size:24px;}
-        p{font-size: 18px;}
-    }
-}
-@media screen and (max-width:1200px){ 
-    .banda-miniaturas_mobile{
-        display:flex !important;
-    }
-    .banda-miniaturas{
-        display:none !important;
+    main .banda-miniaturas{
+        display:none;
     }
 }
 @media screen and (max-width:992px){ 
